# Nimbo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_split_conversion.py
.omc/state/: subagent-tracking.json
SampleApp/: Package.resolved  Package.swift  project.yml
SampleApp/NimboChat/: Info.plist
SampleApp/NimboChat/App/: ContentView.swift  NimboChatApp.swift
SampleApp/NimboChat/Models/: ChatMessage.swift  Conversation.swift  LocalModelInfo.swift
SampleApp/NimboChat/Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
SampleApp/NimboChat/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
SampleApp/NimboChat/Services/: InferenceService.swift  Logger.swift  StorageService.swift
SampleApp/NimboChat/ViewModels/: ChatViewModel.swift  ModelManagerViewModel.swift
SampleApp/NimboChat/Views/Chat/: ChatView.swift  InputBar.swift  MessageBubble.swift
SampleApp/NimboChat/Views/Components/: ToastView.swift
SampleApp/NimboChat/Views/Models/: ModelPickerView.swift
SampleApp/NimboChat/Views/Settings/: SettingsView.swift
SampleApp/NimboCore/: Package.resolved
benchmarks/: benchmark_kernels.py  benchmark_training.py
docs/: index.html  on-device-deployment-guide.md
examples/: config.yaml  usage.py
examples/instruction_finetuning/: korean_cooking_dataset.jsonl  train_korean_cooking.py  train_korean_large.py
examples/instruction_finetuning/output_large/: README.md  training_config.yaml
examples/instruction_finetuning/output_large/checkpoint-200/: rng_state.pth  scheduler.pt  trainer_state.json
examples/instruction_finetuning/output_large/checkpoint-400/: rng_state.pth  scheduler.pt  tokenizer_config.json  trainer_state.json
examples/instruction_finetuning/output_large/checkpoint-600/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
scripts/: check_ane.py  convert_to_coreml.py  setup-dev.sh  verify_dedup.py
src/nimbo/: __init__.py  callbacks.py  config.py  core.py  dataset.py  inference.py
src/nimbo/export/: __init__.py
src/nimbo/export/coreml/: __init__.py  ane_checker.py  base_converter.py  combine.py  dedup_weights.py  hf_converter.py  llama_converter.py  llama_model.py  metadata.py
src/nimbo/kernels/: __init__.py
src/nimbo/kernels/patches/: __init__.py  base.py  exaone.py  llama.py
src/nimbo/kernels/triton/: __init__.py  rms_norm.py  rope.py  rope_fused.py  swiglu.py
tests/: __init__.py  test_kernels.py  test_nimbo.py
