[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nimbo-code"
version = "0.1.0"
description = "A modern, feature-rich Python framework for fine-tuning language models with LoRA adapters."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Nimbo Contributors"}
]
keywords = [
    "machine-learning",
    "deep-learning",
    "transformers",
    "lora",
    "qlora",
    "fine-tuning",
    "llm",
    "language-model",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.0.0",
    "peft>=0.6.0",
    "trl>=0.7.0",
    "accelerate>=0.20.0",
]

[project.optional-dependencies]
# QLoRA support (Priority 4)
qlora = [
    "bitsandbytes>=0.41.0",
]
# Flash Attention support (Priority 4)
flash = [
    "flash-attn>=2.0.0",
]
# W&B integration
wandb = [
    "wandb>=0.15.0",
]
# Config file support
config = [
    "pyyaml>=6.0",
]
# Parquet support
parquet = [
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
]
# Full installation
all = [
    "bitsandbytes>=0.41.0",
    "pyyaml>=6.0",
    "wandb>=0.15.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pyyaml>=6.0",
]

[project.urls]
"Homepage" = "https://github.com/Nimbo-code/Nimbo"
"Bug Reports" = "https://github.com/Nimbo-code/Nimbo/issues"
"Source" = "https://github.com/Nimbo-code/Nimbo"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nimbo*"]

[tool.setuptools.package-data]
nimbo = ["*.py"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "peft.*",
    "datasets.*",
    "trl.*",
    "torch.*",
    "bitsandbytes.*",
    "wandb.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests requiring GPU",
]

[tool.coverage.run]
source = ["src/nimbo"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "venv/*",
    "*venv/*",
    ".venv/*",
    "docs/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
